Fixing spacing on index

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 h1 {
   padding-top: 10%;
-  padding-bottom: 7%;
+  padding-bottom: 2%;
   text-align: center;
   color: white;
   text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
